force-app/main/default/objects/SVMXA360__CONF_EntitledServiceAssignmentRule__c/SVMXA360__CONF_EntitledServiceAssignmentRule__c.object-meta.xml
<CustomObject>
    <description>Stores the configuration rules based on which the entitlement engine assigns Entitled Service on Case or Work Order or Return Order.</description>
    <label>Entitled Service Assignment Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Entitled Service Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitled Service Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>