force-app/main/default/objects/SVMXA360__CONF_EntitledServiceAssignmentRule__c/fields/SVMXA360__Active__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Entitled Service Assignment rule is active (True) or not (False).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>