force-app/main/default/objects/SVMXA360__CONF_EntitledServiceAssignmentRule__c/fields/SVMXA360__ProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the associated Product.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entitled Service Assignment Rules</relationshipLabel>
    <relationshipName>Entitled_Service_Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>